// SPDX-License-Identifier: GPL-3.0-or-later
// Copyright (C) 2024-2026 Open Android Auto contributors
// Based on works by: f1x.studio (aasdk), opencardev (crankshaft), aa-proxy (aa-proxy-rs)
syntax="proto3";

package oaa.proto.ids;

message AVChannelMessage
{
    enum Enum
    {
        AV_MEDIA_WITH_TIMESTAMP_INDICATION = 0x0000;
        AV_MEDIA_INDICATION = 0x0001;
        SETUP_REQUEST = 0x8000;
        START_INDICATION = 0x8001;
        STOP_INDICATION = 0x8002;
        SETUP_RESPONSE = 0x8003;
        AV_MEDIA_ACK_INDICATION = 0x8004;
        AV_INPUT_OPEN_REQUEST = 0x8005;
        AV_INPUT_OPEN_RESPONSE = 0x8006;
        VIDEO_FOCUS_REQUEST = 0x8007;
        VIDEO_FOCUS_INDICATION = 0x8008;
        VIDEO_FOCUS_NOTIFICATION = 0x8009;
        UPDATE_UI_CONFIG_REQUEST = 0x800A;
        UPDATE_UI_CONFIG_REPLY = 0x800B;
        AUDIO_UNDERFLOW = 0x800C;
        ACTION_TAKEN = 0x800D;
        OVERLAY_PARAMETERS = 0x800E;
        OVERLAY_START = 0x800F;
        OVERLAY_STOP = 0x8010;
        OVERLAY_SESSION_UPDATE = 0x8011;
        UPDATE_HU_UI_CONFIG_REQUEST = 0x8012;
        UPDATE_HU_UI_CONFIG_RESPONSE = 0x8013;
        MEDIA_STATS = 0x8014;
        MEDIA_OPTIONS = 0x8015;
    }
}
