// SPDX-License-Identifier: GPL-3.0-or-later
// Copyright (C) 2024-2026 Open Android Auto contributors
// Based on works by: f1x.studio (aasdk), opencardev (crankshaft), aa-proxy (aa-proxy-rs)
syntax="proto3";

package oaa.proto.ids;

message SensorChannelMessage
{
    enum Enum
    {
        NONE = 0x0000;
        SENSOR_REQUEST = 0x8001;         // GAL-level sensor request (wbr)
        SENSOR_START_RESPONSE = 0x8002;
        SENSOR_EVENT_INDICATION = 0x8003;
        SENSOR_ERROR = 0x8004;           // Sensor error notification (wbp)
    }
}
